--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "tailwindcss": "^3.4.17"
   },
   "scripts": {
-    "build": "tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch"
+    "build": "tailwindcss -i public/styles/input.css -o public/styles/output.css --watch"
   }
 }
